# labelprinter

./: Cargo.toml  README.md  build.rs
data/: gschemas.compiled  org.mezeipetister.labelprinting.gschema.xml  resources.gresource  resources.xml
data/ui/: design.ui
src/: main.rs  static_resources.rs  uibuilder.rs  window_state.rs
