[package]
name = "labelprinter"
version = "0.1.0"
authors = ["Peter <mezeipetister@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib-sys = "^0"
gobject-sys = "^0"
glib = "^0"
gio = "^0"
gdk = "^0"
gdk-pixbuf = "^0"
gtk = "^0"
cairo-rs = "^0"
pango = "^0"
pangocairo = "^0"
chrono = "*"